// dev by I Putu Kusuma Negara, ST, MKOM.
// Model for Account

syntax = "proto3";

option csharp_namespace = "UbudKusCoin.Grpc";

service AccountService {
  rpc Add(Account) returns (Account);
  rpc Update(Account) returns (Account);
  rpc GetByPubKey(Account) returns (Account);
  rpc GetByAddress(Account) returns (Account);
  rpc GetRange(AccountParams) returns (AccountList);
  rpc GetBalance(Account) returns (Account);
}


message AccountParams{
  int32 page_number = 1;
  int32 result_per_page = 2; 
}

message AccountList {
  repeated Account accounts = 1;
}

message Account {
	int64 Id = 1;
  string address = 2;
  string pub_key = 3;
	double balance = 4;
  int64 txn_count = 5;
	int64 created = 6;
  int64 updated = 7;
} 
